# CPP-SysMLv2

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.py  package-lock.json
conformance-test/: CMakeLists.txt
conformance-test/src/: TestKerMLParser.cpp  TestProjectController.cpp  TestResourcePackages.cpp  TestRestAPI.cpp
filehandling/: CMakeLists.txt
filehandling/include/kerml/parser/: KerMLBaseListener.h  KerMLLexer.h  KerMLListener.h  KerMLParser.h  KerMlError.h  KerMlErrorListener.h  KerMlListenerImplementation.h
filehandling/include/sysmlv2/: Parser.h  ParserError.h  sysmlv2file_global.h
filehandling/include/sysmlv2/parser/: SysMLv2BaseListener.h  SysMLv2Lexer.h  SysMLv2Listener.h  SysMLv2Parser.h
filehandling/resources/grammars/: KerML.g4  KerML.interp  KerML.l  KerML.yy  KerMLLexer.interp
filehandling/src/: Parser.cpp  Parser.h  ParserError.cpp  ParserError.h
filehandling/src/grammars/: KerML.g4  KerML.l  KerML.y  SysMLv2.g4
filehandling/src/kerml/: KerML.g4  KerML.interp  KerMLBaseListener.h  KerMLBisonParser.cpp  KerMLBisonParser.h  KerMLFlexLexer.cpp  KerMLFlexScanner.cpp  KerMLFlexScanner.h  KerMLLexer.cpp  KerMLLexer.h  KerMLLexer.interp  KerMLLexer.tokens  KerMLListener.cpp  KerMLListener.h  KerMLParser.cpp  KerMLParser.h  KerMlError.cpp  KerMlError.h  KerMlErrorListener.cpp  KerMlErrorListener.h  KerMlListenerImplementation.cpp  KerMlListenerImplementation.h
filehandling/src/kerml/parser/: KerML.interp  KerMLBaseListener.cpp  KerMLLexer.cpp  KerMLLexer.tokens  KerMLListener.cpp  KerMLParser.cpp  KerMlError.cpp  KerMlErrorListener.cpp  KerMlListenerImplementation.cpp
filehandling/src/parsing/: Parser.h  ParserError.h
filehandling/src/parsing/kerml/: KerML.g4  KerML.interp  KerMLBaseListener.cpp  KerMLBaseListener.h  KerMLLexer.cpp  KerMLLexer.h  KerMLLexer.interp  KerMLLexer.tokens  KerMLListener.h  KerMLParser.cpp  KerMLParser.h  KerMlError.cpp  KerMlError.h  KerMlErrorListener.cpp  KerMlErrorListener.h
filehandling/src/parsing/kermlv2/: KerMLConstants.h  KerMLParser.cpp  KerMLParser.h  KerMlLexer.cpp  KerMlLexer.h  KerMlListener.cpp  KerMlListener.h
filehandling/src/parsing/sysml2/: SysMLv2BaseListener.h  SysMLv2Lexer.h  SysMLv2Listener.h  SysMLv2Parser.h
filehandling/src/sysml2/: Parser.cpp  ParserError.cpp  SysMLv2.g4  SysMLv2.interp  SysMLv2.tokens  SysMLv2BaseListener.h  SysMLv2Lexer.cpp  SysMLv2Lexer.h  SysMLv2Lexer.interp  SysMLv2Listener.h  SysMLv2Parser.cpp  SysMLv2Parser.h
filehandling/src/sysml2/parser/: SysMLv2BaseListener.cpp  SysMLv2Lexer.cpp  SysMLv2Listener.cpp  SysMLv2Parser.cpp
interfaces/: CMakeLists.txt
interfaces/src/: sysmlv2base_global.h
interfaces/src/entities/: IEntity.h
kerml/: CMakeLists.txt
kerml/src/: kerml_global.h
kerml/src/Root/Annotations/: AnnotatingElement.cpp  AnnotatingElement.h  Annotation.cpp  Annotation.h  Comment.h  Documentation.h  TextualRepresentation.cpp  TextualRepresentation.h
kerml/src/Root/Dependencies/: Dependency.h
kerml/src/Root/Elements/: Element.cpp  Element.h
kerml/src/core/classifiers/: Classifier.cpp  Classifier.h  Subclassification.cpp  Subclassification.h
kerml/src/core/features/: CrossSubsetting.cpp  CrossSubsetting.h  EndFeatureMembership.cpp  EndFeatureMembership.h  Feature.cpp  Feature.h  FeatureChaining.cpp  FeatureChaining.h  FeatureDirectionKind.h  FeatureInverting.cpp  FeatureInverting.h  FeatureMembership.cpp  FeatureMembership.h  FeatureTyping.cpp  FeatureTyping.h  Featuring.cpp  Featuring.h  Multiplicity.cpp  Multiplicity.h  Redefinition.cpp  Redefinition.h  ReferenceSubsetting.cpp  ReferenceSubsetting.h  Subsetting.cpp  Subsetting.h  TypeFeaturing.cpp  TypeFeaturing.h
kerml/src/core/types/: Conjugation.cpp  Conjugation.h  Conjunction.cpp  Conjunction.h  Differencing.cpp  Differencing.h  Disjoining.cpp  Disjoining.h  Intersecting.cpp  Intersecting.h  Specialization.cpp  Specialization.h  Type.cpp  Type.h  Unioning.cpp  Unioning.h
kerml/src/kernel/associations/: Association.h  AssociationStructure.cpp  AssociationStructure.h
kerml/src/kernel/behaviors/: Behavior.cpp  Behavior.h  Step.cpp  Step.h
kerml/src/kernel/classes/: Class.h
kerml/src/kernel/connectors/: BindingConnector.cpp  BindingConnector.h  Connector.cpp  Connector.h  Expression.h  (+3 more)
resources/: CMakeLists.txt
rest-api/: CMakeLists.txt
rest-api/src/: sysmlv2rest_global.h
rest-api/src/entities/: Branch.cpp  Branch.h  ChangeType.h  Commit.cpp  Commit.h  CommitReference.cpp  CommitReference.h  Data.cpp  Data.h  DataDifference.cpp  DataDifference.h  DataIdentity.cpp  DataIdentity.h  DataVersion.cpp  DataVersion.h  Direction.h  Element.cpp  Element.h  ExternalData.cpp  ExternalData.h  ExternalRelationship.cpp  ExternalRelationship.h  IEntity.h  Identification.cpp  Identification.h  JSONEntities.h  MergeResult.cpp  MergeResult.h  Project.cpp  Project.h  ProjectUsage.cpp  ProjectUsage.h  Query.cpp  Query.h  Record.cpp  Record.h  Relationship.cpp  Relationship.h  Tag.cpp  Tag.h
rest-api/src/serialization/: SysMLv2Deserializer.cpp  SysMLv2Deserializer.h
services/: CMakeLists.txt
services/src/implementation/: ElementNavigationService.cpp  ElementNavigationService.h  ProjectService.cpp  ProjectService.h  ProjectUsageService.cpp  ProjectUsageService.h  ProjectVersioningService.cpp  ProjectVersioningService.h
services/src/interfaces/: IElementNavigationService.h  IExternalReleationshipService.h  IProjectService.h  IProjectUsageService.h  IProjectVersioningService.h  IQueryService.h
services/src/interfacess/: IElementNavigationService.h  IExternalReleationshipService.h  IProjectService.h  IProjectUsageService.h  IQueryService.h
services/src/online/: BECommunicationService.cpp  BECommunicationService.h  ConnectionError.cpp  ConnectionError.h  HttpException.cpp  HttpException.h  HttpReturnCodes.h  NotEnoughMemoryError.cpp  NotEnoughMemoryError.h  StatusCode.h  SysMLAPIImplementation.cpp  SysMLAPIImplementation.h
sysml/: CMakeLists.txt
sysml/include/sysml/: sysml_global.h
sysmlinterfaces/: CMakeLists.txt
sysmlinterfaces/src/sysmlv2/: WindowsCorrection.cpp
(+5739 files in other folders)
